# MatchQuest

./: CMakeLists.txt  README  README.md  check_file_existence.sh  plan.md  plan2.md
include/base/: actor.h  character.h  configuration.h  emptygraphicsitem.h  level.h  mainwindow.h  particle.h  playercontroller.h  serialization.h  userinterface.h
include/particle/: tileelimination.h
include/player/: dualmatchercontroller.h  matcher.h  matchercontroller.h  singlematchercontroller.h  startmenuplayercontroller.h
include/ui/: dualplayergameendui.h  dualplayeringameui.h  singleplayergameendui.h  singleplayeringameui.h  singleplayerpausegameui.h  startmenuui.h
include/world/: dualplayerlevel.h  hinter.h  prop.h  propgenerator.h  singleplayerlevel.h  startmenulevel.h  tile.h  tilelevel.h
resource/: resourcestree.qrc
resource/serialization/: tmp1.se
resource/ui/: dualplayergameendui.ui  dualplayeringameui.ui  framepalette.xml  singleplayergameendui.ui  singleplayeringameui.ui  singleplayerpausegameui.ui  startmenuui.ui
source/base/: actor.cpp  character.cpp  emptygraphicsitem.cpp  level.cpp  main.cpp  mainwindow.cpp  particle.cpp  playercontroller.cpp  serialization.cpp  userinterface.cpp
source/particle/: tileelimination.cpp
source/player/: dualmatchercontroller.cpp  matcher.cpp  matchercontroller.cpp  singlematchercontroller.cpp  startmenuplayercontroller.cpp
source/ui/: dualplayergameendui.cpp  dualplayeringameui.cpp  singleplayergameendui.cpp  singleplayeringameui.cpp  singleplayerpausegameui.cpp  startmenuui.cpp
source/world/: dualplayerlevel.cpp  hinter.cpp  prop.cpp  propgenerator.cpp  singleplayerlevel.cpp  startmenulevel.cpp  tile.cpp  tilelevel.cpp
test/: nosolutiontest.cpp
